# QML-Healthcare-Diagnostics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_data_exploration.ipynb  02_classical_baseline.ipynb  03_quantum_kernels.ipynb  04_qsvm_training.ipynb  05_vqc_qnn_bonus.ipynb  06_results_analysis.ipynb
qsvm-icu-prediction/: README.md
reports/: results.json
scripts/: download_data.py  reproduce_all.py  train_baseline.py  train_qsvm.py  train_vqc_qnn.py  update_readme_table.py
src/qml_healthcare/: __init__.py  config.py  evaluation.py  pipeline.py
src/qml_healthcare/data/: download.py  loader.py  preprocess.py
src/qml_healthcare/models/: __init__.py  _base.py  classical.py  qnn.py  qsvm.py  quantum_kernels.py  vqc.py
tests/: conftest.py  test_evaluation.py  test_models.py  test_preprocess.py  test_quantum_kernels.py
